--- a/first-web-app/pom.xml
+++ b/first-web-app/pom.xml
@@ -41,12 +41,12 @@
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>2.0.2.Final</version>
-                <configuration>
-                    <hostname>194.67.110.239</hostname>
-                    <port>9990</port>
-                    <username>admin</username>
-                    <password>admin123</password>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <hostname>194.67.110.239</hostname>-->
+<!--                    <port>9990</port>-->
+<!--                    <username>admin</username>-->
+<!--                    <password>admin123</password>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
     </build>
